--- a/locale/en/LC_MESSAGES/django.po
+++ b/locale/en/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-10-25 15:22+0000\n"
+"POT-Creation-Date: 2018-10-25 15:31+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -64,7 +64,7 @@ msgid "COLLECTION.TYPE"
 msgstr "Type"
 
 #. Translators: admin:skip
-#: apps/collection/models.py:38 apps/collection/models.py:79
+#: apps/collection/models.py:38
 msgid "COLLECTION.LABEL"
 msgstr "Label"
 
@@ -79,11 +79,16 @@ msgid "COLLECTION.ATTRIBUTION"
 msgstr "Attribution"
 
 #. Translators: admin:skip
+#: apps/collection/models.py:79
+msgid "COLLECTION.NAME.LABEL"
+msgstr "Collection"
+
+#. Translators: admin:skip
 #: apps/collection/models.py:81
 #, fuzzy
-#| msgid "USER.LABEL.PLURAL"
-msgid "COLLECTION.LABEL.PLURAL"
-msgstr "Users"
+#| msgid "COLLECTION.LABEL.PLURAL"
+msgid "COLLECTION.NAME.PLURAL"
+msgstr "Collections"
 
 #. Translators: admin
 #: apps/profiles/admin.py:24
